--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter&family=Roboto&display=swap');
+
 :root {
     --color1: ;
     --color2: ;
@@ -8,11 +11,18 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Inter', sans-serif;
+}
+
+h1, h2, h3 {
+    font-family: 'Roboto', sans-serif;
 }
 
 .app {
     display: grid;
     grid-template-columns: 300px 1fr;
+    column-gap: 3px;
+    margin: 20px 0;
 }
 
 .profile {
@@ -23,4 +33,82 @@
 .content {
     display: flex;
     flex-direction: column;
+}
+
+nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: 50px;
+    font-size: 16px;
+    background-color: #000;
+    color: #FFF;
+    margin: 0 auto;
+    padding: 4px;
+}
+
+li {
+    display: inline-block;
+}
+
+.nav__link {
+    text-decoration: none;
+    color: #FFF;
+    position: relative;
+    text-decoration: none;
+    font-size: 16px;
+    padding: 6px;
+}
+
+.nav__link::after {
+    font-weight: 700;
+    content: "";
+    width: 30px;
+    height: 3px;
+    background-color: #FFF;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+.nav__link:hover::after {
+    width: 100%;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+
+
+.btn {
+    position: relative;
+    border: none;
+    color: white;
+    text-align: center;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 16px;
+    font-weight: 700;
+    background-color: #32911f;
+    border-radius: 9999px;
+    padding: 0.5rem 1rem 0.5rem 1rem;
+    margin: 0.25rem 0.5rem 0.2rem 0rem;
+    line-height: 1.25rem; 
+}
+
+.nav__link {
+    border-radius: 0;
+}
+
+footer {
+    height: 50px;
+    color: #FFF;
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
