--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&family=Roboto&display=swap');
 
 :root {
-    --color1: ;
-    --color2: ;
-    --color3: ;
+    --color1: #E5E7EB;
+    --color2: #6EE7B7;
+    --color3: #D9D9D9;
 }
 
 * {
@@ -21,18 +21,23 @@ h1, h2, h3 {
 .app {
     display: grid;
     grid-template-columns: 300px 1fr;
-    column-gap: 3px;
+    column-gap: 2rem;
     margin: 20px 0;
 }
 
 .profile {
+    background-color: var(--color2);
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    gap: 50px;
 }
 
 .content {
     display: flex;
     flex-direction: column;
+    gap: 30px;
 }
 
 nav {
@@ -83,25 +88,48 @@ ul {
 }
 
 
-
 .btn {
     position: relative;
+    font-family: 'Inter', sans-serif;
     border: none;
-    color: white;
+    color: #000;
     text-align: center;
     cursor: pointer;
     display: inline-block;
     font-size: 16px;
-    font-weight: 700;
-    background-color: #32911f;
+    font-weight: 900;
+    background-color: var(--color1);
     border-radius: 9999px;
     padding: 0.5rem 1rem 0.5rem 1rem;
     margin: 0.25rem 0.5rem 0.2rem 0rem;
     line-height: 1.25rem; 
+    border-width: 1px; 
+}
+
+.btn:hover {
+    color: #FFF;
+}
+
+.btn-secondary {
+    border-radius: 0;
+    background-color: var(--color2);
 }
 
 .nav__link {
     border-radius: 0;
+}
+
+article {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 15px;
+    
+}
+
+article > h3 {
+    font-weight: 700;
+
 }
 
 footer {
@@ -111,4 +139,10 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.skills {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
