--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,10 @@ article > h3 {
 
 }
 
+h1 {
+    box-shadow: 1px 1px 1px 1px var(--color3);
+}
+
 nav {
     display: flex;
     height: 100px;
@@ -113,9 +117,9 @@ aside img {
     background-color: var(--color2);
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: flex-start;
     align-items: center;
-    gap: 20px;
+    gap: 10px;
     
 }
 
@@ -205,10 +209,7 @@ aside img {
 }
 
 .profile__name {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
+    text-align: center;
     color: #FFF;
 }
 
@@ -251,6 +252,11 @@ form {
     gap: 5px;
 }
 
+a {
+    text-decoration: none;
+    color: grey;
+}
+
 label {
     font-weight: 600;
     text-align: left;
@@ -273,5 +279,13 @@ textarea {
         visibility: hidden;
     }
 
-    
+    .profile {
+        background-color: #FFF;
+        
+    }
+
+    .profile__name {
+        color: #000;
+    }
+
 }
