--- a/styles.css
+++ b/styles.css
@@ -425,6 +425,11 @@ textarea {
     width: 216px;
 }
 
+audio {
+    display: block;
+    margin: 0 auto;
+}
+
 
 
 @media screen and (max-width: 768px) {
