--- a/proyecto3/myshopappclient/src/app/principal/principal.component.html
+++ b/proyecto3/myshopappclient/src/app/principal/principal.component.html
@@ -1,5 +1,13 @@
-<div>
-    <h1>My Shop App</h1>
-    <mat-icon>shop</mat-icon>
-    <button class="btn btn-primary"></button>
+<div class="container full ">
+    <div class="v-align d-grid gap-4">
+        <div class="text-center">
+			<mat-icon class="icon-display">shop</mat-icon>
+		</div>
+		<div class="text-center">
+			<h1 class="fw-bolder texto-grande">My Shop App</h1>
+		</div>
+        <div class="text-center">
+            <button class="btn btn-primary" routerLink="/inicio">Continuar</button>
+        </div>
+    </div>
 </div>
