--- a/proyecto3/myshopappclient/src/app/footer/footer.component.html
+++ b/proyecto3/myshopappclient/src/app/footer/footer.component.html
@@ -1,1 +1,14 @@
-<p>footer works!</p>
+<div class="container d-flex justify-content-around align-items-center px-3 py-3 position-static">
+    <span routerLink="/inicio">
+        <mat-icon class="text-center icon-display">home</mat-icon>
+        <p class="text-center">Inicio</p>
+    </span>
+    <span routerLink="/inicio"> 
+        <mat-icon class="text-center icon-display">search</mat-icon>
+        <p class="text-center">Buscar</p>
+    </span>
+    <span routerLink="/inicio">
+        <mat-icon class="text-center icon-display">person_outline</mat-icon>
+        <p class="text-center">Perfil</p>
+    </span>
+</div>
