--- a/proyecto3/myshopappclient/src/app/home/home.component.html
+++ b/proyecto3/myshopappclient/src/app/home/home.component.html
@@ -1,7 +1,9 @@
 <div class="container full">
     <app-header></app-header>
-    <div>
-        <h1>Contenido</h1>
+    <div class="container-fluid full overflow-auto h-auto">
+        <div class="row row-cols-2">
+            <app-card routerLink="/infoproducto" [content]="product" *ngFor="let product of products"></app-card>
+        </div>
     </div>
-    <app-footer></app-footer>
+    <app-footer ></app-footer>
 </div>
