Frontend casi listo

--- a/proyecto3/myshopappclient/src/app/buscar/buscar.component.html
+++ b/proyecto3/myshopappclient/src/app/buscar/buscar.component.html
@@ -1,1 +1,24 @@
-<p>buscar works!</p>
+<div class="container full">
+    <app-header></app-header>
+    <div class="container-fluid">
+        <div class="container">
+            <div class="d-flex align-items-center">
+                <div class="input-group d-flex align-items-center">
+                    <div class="form-outline">
+                      <input id="search-focus" type="search" id="form1" class="form-control" placeholder="Buscar un producto..." />
+                    </div>
+                    <button type="button left-end" class="btn btn-primary">
+                        <i class="bi bi-search"></i>
+                    </button>
+                </div>
+            </div>
+            <h3 class="my-3">Resultados (0)</h3>
+            <div class="my-3 container-fluid full overflow-auto h-auto">
+                <div class="row row-cols-2">
+                    Nothing...
+                </div>
+            </div>
+        </div>
+    </div>
+    <app-footer></app-footer>
+</div>
