--- a/proyecto3/myshopappclient/src/app/footer/footer.component.html
+++ b/proyecto3/myshopappclient/src/app/footer/footer.component.html
@@ -3,11 +3,11 @@
         <mat-icon class="text-center icon-display">home</mat-icon>
         <p class="text-center">Inicio</p>
     </span>
-    <span routerLink="/inicio"> 
+    <span routerLink="/buscar"> 
         <mat-icon class="text-center icon-display">search</mat-icon>
         <p class="text-center">Buscar</p>
     </span>
-    <span routerLink="/inicio">
+    <span routerLink="/perfil">
         <mat-icon class="text-center icon-display">person_outline</mat-icon>
         <p class="text-center">Perfil</p>
     </span>
