--- a/proyecto3/myshopappclient/src/app/principal/principal.component.html
+++ b/proyecto3/myshopappclient/src/app/principal/principal.component.html
@@ -1,4 +1,4 @@
-<div class="container full ">
+<div class="container full">
     <div class="v-align d-grid gap-4">
         <div class="text-center">
 			<mat-icon class="icon-display">shop</mat-icon>
@@ -7,7 +7,7 @@
 			<h1 class="fw-bolder texto-grande">My Shop App</h1>
 		</div>
         <div class="text-center">
-            <button class="btn btn-primary" routerLink="/inicio">Continuar</button>
+            <button class="btn btn-primary" routerLink="/iniciarsesion">Continuar</button>
         </div>
     </div>
 </div>
