--- a/proyecto3/myshopappclient/src/app/ingresar/ingresar.component.html
+++ b/proyecto3/myshopappclient/src/app/ingresar/ingresar.component.html
@@ -1,1 +1,24 @@
-<p>ingresar works!</p>
+<div class="container full">
+    <div class="my-3 text-center">
+      <i class="bi bi-cart icon-display text-center"></i>
+    </div>
+    <h1 class="text-center fw-bold fs-1">My Shop App</h1>
+    <div class="container v-align d-grid gap-4">
+        <div class="container full">
+            <form>
+                <div class="my-3 form-group">
+                  <label for="exampleInputEmail1">Correo</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                </div>
+                <div class="my-3 form-group">
+                  <label for="exampleInputPassword1">Contraseña</label>
+                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                </div>
+                <button routerLink="/inicio" type="submit" class="btn btn-primary">Iniciar Session</button>
+              </form>
+              <div class="my-3 left-start">
+                <p class="left-start">No tienes cuenta? <span routerLink="/registrar" class="blue-500">Registrate aqui</span></p>    
+            </div> 
+        </div>
+    </div>
+</div>
