--- a/proyecto3/myshopappclient/src/app/infoproducto/infoproducto.component.html
+++ b/proyecto3/myshopappclient/src/app/infoproducto/infoproducto.component.html
@@ -3,11 +3,11 @@
     <div class="container">
         <div class="container-fluid">
             <div class="col-md-12 text-center">
-                <img src="../../assets/images/foto2.webp" alt="foto1">
+                <img src="{{producto.url_image}}" alt="{{producto.nombre}}">
             </div>
-            <h2>Nombre del Producto</h2>
-            <p>Descripcion</p>
-            <p class="fw-bolder blue-500">Precio</p>
+            <h2>{{producto.nombre}}</h2>
+            <p>Unidades Disponibles: {{producto.stock}}</p>
+            <p class="fw-bolder blue-500">Precio: ${{producto.precio}}</p>
             <div class="col-md-12 text-center">
                 <button class="my-4 btn btn-primary mx-auto my-0">
                     Agregar al Carrito
