--- a/proyecto3/myshopappclient/src/app/header/header.component.html
+++ b/proyecto3/myshopappclient/src/app/header/header.component.html
@@ -1,9 +1,7 @@
 <div class="position-relative">
     <div class="container d-flex justify-content-around align-items-center px-3 py-3 position-sticky top-0 end-0">
         <i class="bi bi-arrow-left-short icon-display" routerLink="/inicio"></i>
-        <select class="form-select form-select-sm  w-50 " name="filtrador" id="filtrador">
-            <option selected>Mostrar Todo</option>
-        </select>
+        <span class="fs-2">{{title}}</span>
         <i class="bi bi-bag icon-display" routerLink="/micompras"></i>
     </div>
 </div>
