--- a/proyecto3/myshopappclient/src/app/home/home.component.html
+++ b/proyecto3/myshopappclient/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container full">
-    <app-header></app-header>
+    <app-header [title]="title_info"></app-header>
     <div class="container-fluid full overflow-auto h-auto">
         <div class="row row-cols-2">
             <app-card [routerLink]="['/inicio', product.id]" [content]="product" *ngFor="let product of productos"></app-card>
