--- a/proyecto3/myshopappclient/src/app/card/card.component.html
+++ b/proyecto3/myshopappclient/src/app/card/card.component.html
@@ -7,7 +7,7 @@
     <img src="{{content.url_image}}" alt="{{content.nombre}}">
     <h4 class="card-title">{{content.nombre.substring(0,20)}}</h4>
     <p class="card-text fw-bold blue-500">$ {{ content.precio }}</p>
-    <p class="btn btn-primary">{{content.categoriaId}}</p>
+    <p class="btn btn-primary">{{content.categorium.name}}</p>
     <button class="btn btn-outline-primary btn-rounded waves-effect">
         Agregar
     </button>
