--- a/proyecto3/myshopappclient/src/app/card/card.component.html
+++ b/proyecto3/myshopappclient/src/app/card/card.component.html
@@ -1,14 +1,11 @@
-<div class="container px-3 py-3 d-flex flex-column justify-content-between align-items-center my-2">
-    <div class="container-fluid">
+<div class="container px-1 py-3 d-flex flex-column justify-content-between align-items-center my-2">
+    <div class="my-3 container-fluid">
         <p class="position-relative">
             <i class="bi bi-heart icon-display"></i>
         </p>
     </div>
     <img src="{{content.url_image}}" alt="{{content.nombre}}">
     <h4 class="card-title">{{content.nombre.substring(0,20)}}</h4>
-    <p class="card-text fw-bold blue-500">$ {{ content.precio }}</p>
+    <p class="card-text fw-bold blue-500 fs-6">$ {{ content.precio }}</p>
     <p class="btn btn-primary">{{content.categorium.name}}</p>
-    <button class="btn btn-outline-primary btn-rounded waves-effect">
-        Agregar
-    </button>
 </div>
