--- a/proyecto3/myshopappclient/src/app/carrito/carrito.component.html
+++ b/proyecto3/myshopappclient/src/app/carrito/carrito.component.html
@@ -3,40 +3,9 @@
     <div class="container-fuild">
         <h2 class="text-center">Carrito de Compras</h2>
         <div class="container-fluid d-flex flex-column justify-content-around align-items-center">
-            <div class="container row px-1 py-2">
-                <div class="col">
-                    <img src="../../assets/images/foto2.webp" alt="Foto 1">
-                </div>
-                <div class="col">
-                    <div class="d-flex flex-column">
-                        <p>Titulo</p>
-                        <p>Cantidad: 1</p>
-                        <p class="fs-bold blue-500">Precio</p>
-                    </div>
-                </div>
-                <div class="col d-flex justify-content-center align-items-center gap-2">
-                    <button class="btn btn-primary">
-                        -
-                    </button>
-                    <span class="text-center">
-                        1
-                    </span>
-                    <button class="btn btn-primary">
-                        +
-                    </button>
-                </div>
-            </div>
-        </div>
-        <hr >
-        <div class="row">
-            <div class="col-8">
-                <p class="fw-bold">SubTotal: </p>
-            </div>
-            <div class="col-4">
-            <p class="fw-bold float-end">
-                $ 0
-            </p>
-            </div>
+            <app-itemscarrito *ngFor="let product of productos" [producto]="product">
+                
+            </app-itemscarrito>
         </div>
     </div>
     <app-footer></app-footer>
