--- a/proyecto3/myshopappclient/src/app/ingresar/ingresar.component.html
+++ b/proyecto3/myshopappclient/src/app/ingresar/ingresar.component.html
@@ -6,6 +6,9 @@
   <div *ngIf="message" class="my-2 alert alert-danger" role="alert">
     {{message}}
   </div>
+  <div *ngIf="message" class="alert alert-secondary" role="alert">
+    {{message}}
+  </div>
   <div class="container v-align d-grid gap-4">
     <div class="container full">
       <form [formGroup]="form">
